# anisub-cli

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md
.github/workflows/: rust.yml
src/: config.rs  main.rs
src/commands/: login.rs  mod.rs  search.rs
