[package]
name = "anisub-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
json5 = "1.3.1"
reqwest = { version = "0.13.4", features = ["blocking", "json", "query"] }
serde = { version = "1.0.229", features = ["derive"] }
