[package]
name = "anisub-cli"
version = "0.1.0"
edition = "2024"
authors = ["ewgsta <ewgst@proton.me"]
description = "Türkçe anime alt yazı platformu anisub.co için cli aracı."
repository = "https://github.com/ewgsta/anisub-cli"
license = "GPL-3.0"
keywords = ["anisub.co", "anisub", "turkce-anime", "anime-altyazi", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
json5 = "1.3.1"
reqwest = { version = "0.13.4", features = ["blocking", "cookies", "json", "query"] }
scraper = "0.27.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
